--- a/output/report.Rmd
+++ b/output/report.Rmd
@@ -9,5 +9,109 @@ output:
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+
+library(here)
+library(tidyverse)
+library(httr)
+library(rvest)
+library(httr2)
 ```
 
+# 1. Introduction
+
+This report aims to answer the following research question:
+
+*"Research question"*
+
+# 2. Hypothesis
+
+We hypothesise that XYXY
+
+# 3. Code
+
+## 3.1 Setting API Key up
+
+We found several methods to set up the API key.
+
+### 3.1.1 Version 1:
+```{r, eval=FALSE}
+# check wd
+getwd()
+
+# Create File using the windows editor
+# Write on the first line without any space Key=Your_Key
+# Note: Your_Key is the Key you got from the Guardians-API
+
+# Call the file .Renviron it is already in the gitignore-file
+# Note: When saving the file, check that you change the Data-Type
+
+# Restart your R-Session
+
+# Use this Code to read in your Key - It should appear in the Global Environment
+api_key <- Sys.getenv(x= "Key")
+```
+
+### 3.1.2 Version 2:
+```{r, eval=FALSE}
+# Proposal of API key system and wrapper function to fetch data from the Guardian API.
+
+# Save your API key in an api_credentials.csv file in the folder api_key. The column name the key is stored under must be named api_key. 
+
+# Load the API key and store in a variable
+
+api_key <- read_csv(here("api_key/api_credentials.csv")) %>% 
+  pull(api_key)
+```
+
+### 3.1.3 Version 3:
+```{r, eval=FALSE}
+api_key <- rstudioapi::askForPassword()
+```
+
+## 3.2 Create a wrapper function to get the data from the API
+```{r, eval=FALSE}
+# Define the URL for the API
+guardian_api_base_url <- "https://content.guardianapis.com/search"
+
+# Create wrapper function to get the data from the API
+get_guardian_data <- function(api_key, search_term, from_date, to_date, page) {
+  
+  # Define the parameters for the API call
+    params <- list(
+    "api-key" = api_key,
+    "q" = search_term,
+    "from-date" = from_date,
+    "to-date" = to_date,
+    "page" = page
+  )
+  
+  # Make the API call
+    response <- httr::GET(url = guardian_api_base_url, query = params)
+  
+  # Check if the API call was successful
+    if (response$status_code == 200) {
+    
+    # Parse the response
+        data <- httr::content(response)
+    
+    # Extract the relevant information
+        results <- data$response$results
+    
+    # Return the results
+        return(results)
+    
+  } else {
+    
+    # If the API call was not successful, print an error message
+        message("Error: API call failed with status code ", response$status_code)
+    
+    # Return NULL
+    return(NULL)
+  }
+}
+```
+
+
+# 4. Results
+
+# 5. Discussion
