--- a/output/report.Rmd
+++ b/output/report.Rmd
@@ -25,7 +25,7 @@ This report aims to answer the following research question:
 
 # 2. Hypothesis
 
-We hypothesise that XYXY
+We try to perform a sentiment analysis on articles on Julien Assange. The articles were fetched from the Guardian API.
 
 # 3. Code
 
